--- a/try/static/css/conection.css
+++ b/try/static/css/conection.css
@@ -100,7 +100,7 @@ header #group #menu #mnu:hover{
 #univer{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
 }
 
 #univer #setting{
@@ -113,7 +113,6 @@ header #group #menu #mnu:hover{
     background-color: #FF6A00;
     z-index: 99;
     transition: 1s ease-in-out;
-    padding: 0rem 1rem;
 }
 
 #setting #close{
@@ -179,7 +178,6 @@ main{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
 }
 
 #all{
@@ -188,101 +186,136 @@ main{
     align-items: center;
     justify-content: center;
     width: 70%;
+    height: 96vh;
     background-color: rgba(255, 255, 255, 0.788);
+    padding: 3rem 3rem;
 }
 
-#all ul{
+#all #container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 75%;
-    list-style: none;
-    margin: 1.5rem 3rem;
-}
-
-#all ul li{
-    width: 90%;
-    margin: 1.5rem 0;
-    padding: 1.5rem;
-    background-color: rgba(255, 255, 255, 0.67);
-}
-
-#all ul li article h4{
-    text-align: center;
-    color: #FF6A00;
-    font-size: larger;
-    margin: 0.1rem 0;
-}
-
-#all ul li article h4 span{
-    color: #468d1c;
-}
-
-#all ul li article h4 b{
-    color: red;
-}
-
-#all ul li section{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-#all ul li section img{
-    width: 7rem;
-    height: auto;
-}
-
-#all ul li #com{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-#all ul li #com h4{
-    text-align: center;
-    color: #468d1c;
-    font-size: large;
-    margin: 0.1rem;
-}
-
-#all ul li #com p{
-    text-align: left;
-    object-fit: fill;
-}
-
-#all #foot{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 80%;
-    margin-bottom: 1rem;
-}
-
-#all #foot button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 3rem;
-    height: 3rem;
+    /*justify-content: center;*/
+    background: conic-gradient(from 180deg at 50% 50%, #ff7b36 29.64%, #000000 50.06%, #f80505 68.48%);
+    height: 50vh;
+    width: 50%;
     border: none;
-    border-radius: 0.3rem;
-    background-color: #FF6A00;
-    margin-right: 0.8rem;
+    border-radius: 1.5rem;
+    margin-bottom: 23vh;
 }
 
-#all #foot button a{
+#all #container figure{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 30%;
+    margin: 2rem;
+    margin-bottom: 5rem;
+    padding-top: 2rem;
+}
+
+#all #container figure input{
+    width: 50%;
+    height: auto;
+    object-fit: cover;
+}
+
+#all #container figure img{
+    width: 50%;
+    height: auto;
+    object-fit: cover;
+}
+
+#all #container fieldset{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border: none;
+    border-radius: 1.5rem;
+    padding: 1rem 1rem;
+}
+
+#all #container fieldset form{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
+    flex-direction: column;
 }
 
-#all #foot button a img{
-    width: 70%;
-    height: 70%;
+#all #container fieldset form #put{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 1rem;
+}
+
+#all #container fieldset form #zone1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 100%;
+}
+
+#all #container fieldset form #zone1 input{
+    width: 100%;
+    margin-bottom: 1rem;
+    background-color: white;
+    font-size: large;
+    text-align: left;
+    object-fit: fill;
+    border: none;
+    border-bottom: 2px solid #000000;
+    padding: 1rem 1rem;
+}
+
+#all #container fieldset button{
+    padding: 0.5rem 0.5rem;
+    background-color: #FF6A00;
+    color: white;
+    border: none;
+    font-size: large;
+    cursor: pointer;
+    border-radius: 0.2rem;
+    margin-top: 0.5rem;
+}
+
+/*#all #container fieldset form #zone2{*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    !*justify-content: center;*!*/
+/*    align-items: center;*/
+/*    width: 45%;*/
+/*    height: 100%;*/
+/*}*/
+
+/*#all #container fieldset form #zone2 input{*/
+/*    width: 100%;*/
+/*    margin-bottom: 1rem;*/
+/*    background-color: white;*/
+/*    font-size: large;*/
+/*    text-align: left;*/
+/*    object-fit: fill;*/
+/*    border: none;*/
+/*    border-bottom: 2px solid #000000;*/
+/*    padding: 1rem 1rem;*/
+/*}*/
+
+#all #container fieldset button{
+    padding: 0.5rem 0.5rem;
+    background-color: #FF6A00;
+    color: white;
+    border: none;
+    font-size: large;
+    cursor: pointer;
+    border-radius: 0.2rem;
 }
