--- a/try/templates/home1.html
+++ b/try/templates/home1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QCM_TEST</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home1.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
@@ -33,17 +33,17 @@
                 <img src="{% static 'images/cancel_presentation_32dp_000000_FILL0_wght400_GRAD0_opsz40.png'  %}" alt="cls" id="cls">
             </div>
             <ul>
-{#                <li>#}
-{#                    <a href="#">Your Profile</a>#}
-{#                </li>#}
-{#                <li>#}
-{#                    <a href="#">Settings</a>#}
-{#                </li>#}
-{#                <li>#}
-{#                    <a href="#">About us</a>#}
-{#                </li>#}
                 <li>
-                    <a href="/inscription/">Sign in</a>
+                    <a href="{% url 'profile' %}">Your Profile<br>({{ user.username }})</a>
+                </li>
+                <li>
+                    <a href="#">Settings</a>
+                </li>
+                <li>
+                    <a href="#">About us</a>
+                </li>
+                <li>
+                    <a href="{% url 'logout' %}">Logout</a>
                 </li>
             </ul>
             <div id="footer">
@@ -51,8 +51,9 @@
             </div>
         </div>
         <main>
-            <div id="all">
-                <h3 style="position: fixed; background-color: white; width: 60%; text-align:center;">Veuillez vous inscrire ou vous connecter afin de participer au TEST(via le menu).</h3>
+            <form method="POST", action="{% url 'submit_answers' %}">
+                {% csrf_token %}
+                <div id="all">
                 <ul>
                     {% for question in questions %}
                         <li>
@@ -60,21 +61,20 @@
                             <section>
                                 {{ question.question }}
                             </section>
-                            <input type="text" name="answer" id="answer" placeholder="type your answer here.">
+                            <input type="text" name="{{ question.id }}" id="answer" placeholder="type your answer here.">
                         </li>
                     {% empty %}
                         <li>No questions yet.</li>
                     {% endfor %}
                 </ul>
-{#                <div id="foot">#}
-{#                    <h4>Submit</h4>#}
-{#                    <button>#}
-{#                        <a href="/correction/">#}
-{#                            <img src="{% static 'images/send_32dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png'%}" alt="">#}
-{#                        </a>#}
-{#                    </button>#}
-{#                </div>#}
+                <div id="foot">
+                    <h4>Submit</h4>
+                    <button type="submit">  <!-- Pas de lien à l'intérieur du bouton -->
+                        <img src="{% static 'images/send_32dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png' %}" alt="">
+                    </button>
+                </div>
             </div>
+            </form>
         </main>
     </div>
 </body>
