--- a/try/templates/profile.html
+++ b/try/templates/profile.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +17,7 @@
         <div id="group">
             <a href="/">
                 <img src="{% static 'images/qcm_logo.png' %}" alt="Logo du QCM">
-                <h1>QCM_TEST</h1>
+                <h1>QCM_TEST/{{ user.username }}</h1>
             </a>
             <div id="score">
                 <span id="un"><h3>Score</h3></span>
@@ -33,17 +34,17 @@
                 <img src="{% static 'images/cancel_presentation_32dp_000000_FILL0_wght400_GRAD0_opsz40.png'  %}" alt="cls" id="cls">
             </div>
             <ul>
-{#                <li>#}
-{#                    <a href="#">Your Profile</a>#}
-{#                </li>#}
-{#                <li>#}
-{#                    <a href="#">Settings</a>#}
-{#                </li>#}
-{#                <li>#}
-{#                    <a href="#">About us</a>#}
-{#                </li>#}
                 <li>
-                    <a href="/inscription/">Sign in</a>
+                    <a href="{% url 'profile' %}">Your Profile({{ user.username }})</a>
+                </li>
+                <li>
+                    <a href="#">Settings</a>
+                </li>
+                <li>
+                    <a href="#">About us</a>
+                </li>
+                <li>
+                    <a href="{% url 'logout' %}">Logout</a>
                 </li>
             </ul>
             <div id="footer">
@@ -52,28 +53,10 @@
         </div>
         <main>
             <div id="all">
-                <h3 style="position: fixed; background-color: white; width: 60%; text-align:center;">Veuillez vous inscrire ou vous connecter afin de participer au TEST(via le menu).</h3>
-                <ul>
-                    {% for question in questions %}
-                        <li>
-                            <article><h4>Question {{ forloop.counter }}</h4></article>
-                            <section>
-                                {{ question.question }}
-                            </section>
-                            <input type="text" name="answer" id="answer" placeholder="type your answer here.">
-                        </li>
-                    {% empty %}
-                        <li>No questions yet.</li>
-                    {% endfor %}
-                </ul>
-{#                <div id="foot">#}
-{#                    <h4>Submit</h4>#}
-{#                    <button>#}
-{#                        <a href="/correction/">#}
-{#                            <img src="{% static 'images/send_32dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png'%}" alt="">#}
-{#                        </a>#}
-{#                    </button>#}
-{#                </div>#}
+                <h1>Your QCM Profile</h1>
+                <p>
+                   Dear {{ user.username }}
+                </p>
             </div>
         </main>
     </div>
